[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/TeestEnemy.png" type="Texture" id=1]
[ext_resource path="res://TestRangeEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.1208, 11.3563 )

[sub_resource type="CircleShape2D" id=2]
radius = 688.607

[sub_resource type="CircleShape2D" id=3]
radius = 162.729

[sub_resource type="CircleShape2D" id=4]
radius = 230.886

[node name="TestRangeEnemy" type="KinematicBody2D" groups=[
"mobs",
]]
position = Vector2( 501.809, 309.272 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="TeestEnemy" type="Sprite" parent="."]
position = Vector2( 0.135303, 0.0239649 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 2 )

[node name="Danger" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Danger"]
shape = SubResource( 3 )

[node name="SafeZone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeZone"]
shape = SubResource( 4 )
one_way_collision = true

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="body_entered" from="Danger" to="." method="_on_Danger_body_entered"]
[connection signal="body_exited" from="Danger" to="." method="_on_Danger_body_exited"]
[connection signal="body_entered" from="SafeZone" to="." method="_on_SafeZone_body_entered"]
[connection signal="body_exited" from="SafeZone" to="." method="_on_SafeZone_body_exited"]
